--- a/shared/src/main/res/values-nl/strings.xml
+++ b/shared/src/main/res/values-nl/strings.xml
@@ -29,7 +29,7 @@
     <string name="menu_invite">Vrienden uitnodigen</string>
     <string name="menu_feature_settings">Geavanceerde opties</string>
     <string name="menu_settings">Algemene instellingen</string>
-    <string name="menu_customization_settings">Aanpassingsinstellingen</string>
+    <string name="menu_customization_settings">Personaliseringsinstellingen</string>
     <string name="menu_mms_configuration">MMS Configuratie</string>
     <string name="menu_account">Mijn account</string>
     <string name="menu_device_texting">SMS van elk toestel</string>
@@ -161,7 +161,7 @@ Je kan Pulse gebruiken om vanop <b>elk</b> toestel te sms\'en.</string>
     <!-- Templates -->
     <string name="type_template_text">Vul tekst voor sjabloon in...</string>
     <string name="delete_template">Ben je zeker dat je dit sjabloon wilt verwijderen?</string>
-    <string name="no_templates">Gebruik de <b>+</b> knop om een nieuwe sjabloon te creëren</string>
+    <string name="no_templates">Gebruik de <b>+</b>-knop om een nieuwe sjabloon te creëren</string>
     <!-- Compose Screen -->
     <string name="compose_message">Stel nieuw bericht op</string>
     <string name="send_message">Verstuur bericht</string>
@@ -188,7 +188,7 @@ Je kan Pulse gebruiken om vanop <b>elk</b> toestel te sms\'en.</string>
     <string name="message_anywhere_onboarding_content_1">Naadloze integratie met elk toestel (tablet, smartwatch, web, Google Chrome en Firefox) om SMS en MMS van overal te versturen!</string>
     <string name="message_anywhere_onboarding_content_2">Ongelooflijke lage prijs wanneer jij het nodig hebt: $10.99 voor het leven, $5.99 per jaar, $1.99 voor 3 maand of $0.99 per maand. Minder dan een kop koffie!</string>
     <string name="message_anywhere_onboarding_content_3">Gebruik de Android app GRATIS (voor altijd!) op je smartphone of start met SMS\'en vanop al jouw toestellen met EEN WEEK gratis trial.</string>
-    <string name="start_trial">Start\nTrial</string>
+    <string name="start_trial">Start\nProefperiode</string>
     <string name="not_now">Niet \nNu</string>
     <string name="onboarding_done">Klaar</string>
     <string name="play_store_subscription_warning">Je zal worden omgeleid naar de Play Store abonnementen. Er <b>wordt niets</b> aangerekend tot het einde van de zeven dagen proefperiode en je kan je abonnement ten allen tijde annuleren via de Play Store.</string>
@@ -238,7 +238,7 @@ Je kan Pulse gebruiken om vanop <b>elk</b> toestel te sms\'en.</string>
     <string name="receiving_a_message">Een bericht ontvangen...</string>
     <!-- About, Help and Feedback and Settings -->
     <string name="changelog">Changelog</string>
-    <string name="copyright">© 2016 Jake Klinker &amp; Luke Klinker</string>
+    <string name="copyright">© 2017 Jake Klinker &amp; Luke Klinker</string>
     <string name="copyright_summary">Bekijk open source license information</string>
     <string name="app_version">App Versie</string>
     <string name="account_information">Account informatie</string>
@@ -258,7 +258,7 @@ Je kan Pulse gebruiken om vanop <b>elk</b> toestel te sms\'en.</string>
     <string name="get_help">Help krijgen</string>
     <string name="get_help_summary">Heb je een vraag? Ik kan als alleenstaande developer niet alle aanvragen verwerken. Gelieve jouw vraag hieronder op te zoeken. Niets gevonden? E-mail me gaan gerust.</string>
     <string name="get_help_summary_2">De help-sectie is reeds zeer uitgebreid. Toch niet gevonden wat je zocht? Neem gerust contact met mij op!</string>
-    <string name="features">Functies</string>
+    <string name="features">Functies van Pulse</string>
     <string name="issues">Issue Tracker</string>
     <string name="issues_summary">Toont ook een feature roadmap</string>
     <string name="google_plus">Google+</string>
@@ -377,7 +377,7 @@ Je kan Pulse gebruiken om vanop <b>elk</b> toestel te sms\'en.</string>
     <string name="after_four_messages">Na vier berichten</string>
     <string name="send_as_mms_summary">Lange berichten verzenden als MMS i.p.v. SMS</string>
     <string name="alert_types">Instellingen notificaties</string>
-    <string name="alert_types_summary">Vele aanpassingen voor notificaties</string>
+    <string name="alert_types_summary">Pas de notificaties aan</string>
     <string name="strip_unicode">Strip Unicode</string>
     <string name="strip_unicode_summary">Deze karakters zullen worden verwijderd bij uitgaande berichten.</string>
     <string name="giffgaff_delivery">Giffgaff Delivery Reports</string>
@@ -393,7 +393,7 @@ Nadien zal je opnieuw moeten inloggen op al jouw toestellen. Wil je doorgaan?</s
     <string name="show_conversation_history_summary">Notificaties zullen vorige berichten uit de conversatie weergeven</string>
     <string name="emoji_style">Emoji stijl</string>
     <string name="emoji_style_default">Standaard systeem</string>
-    <string name="emoji_style_android_o">Google\'s Android O</string>
+    <string name="emoji_style_android_o">Google\'s Android Oreo</string>
     <string name="settings_phone_number">Telefoonnummer</string>
     <string name="disable_battery_optimization">Batterijoptimalisatie uitschakelen</string>
     <string name="disable_battery_optimization_summary">Als berichten niet getoond worden op het web, deactiveer batterijoptimalisatie voor Pulse.</string>
@@ -421,7 +421,7 @@ Nadien zal je opnieuw moeten inloggen op al jouw toestellen. Wil je doorgaan?</s
     <string name="delayed_sending_summary">Dit geeft je een kans om berichten te annuleren en aan te passen voordat ze worden verzonden</string>
     <string name="messaging_features">Messaging-functies</string>
     <string name="app_features">App-functies</string>
-    <string name="quick_compose">Snel opstellen</string>
+    <string name="quick_compose">Snel opstellen notificatie</string>
     <string name="quick_compose_notification">Toon notificatie</string>
     <string name="quick_compose_notification_summary">Altijd-actieve notificatie om snel nieuwe berichten op te stellen</string>
     <string name="quick_compose_favorites">Favoriete contacten</string>
