--- a/shared/src/main/res/values-ru/strings.xml
+++ b/shared/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
     <!--
-  ~ Copyright (C) 2016 Jacob Klinker
+  ~ Copyright (C) 2017 Luke Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -29,6 +29,7 @@
     <string name="menu_invite">Пригласить друзей</string>
     <string name="menu_feature_settings">Дополнительно</string>
     <string name="menu_settings">Настройки</string>
+    <string name="menu_customization_settings">Настройки кастомизации</string>
     <string name="menu_mms_configuration">Настройка MMS</string>
     <string name="menu_account">Моя учётная запись</string>
     <string name="menu_device_texting">Другие платформы</string>
@@ -46,6 +47,7 @@
     <string name="menu_move_to_inbox">Переместить во Входящие</string>
     <string name="menu_conversation_information">Информация о диалоге</string>
     <string name="menu_copy_phone_number">Скопировать номер</string>
+    <string name="menu_view_full_conversation">Смотреть историю</string>
     <string name="menu_conversation_blacklist">Добавить в чёрный список</string>
     <string name="menu_conversation_schedule">Отложить сообщение</string>
     <string name="menu_contact_settings">Настройки беседы</string>
@@ -121,6 +123,7 @@
     <string name="attach_location">Добавить местоположение</string>
     <string name="attach_contact">Прикрепить контакт</string>
     <string name="attach_contact_summary">Выберите или введите контакт, чтобы прикрепить к сообщению!</string>
+    <string name="apply_template">Применить шаблон</string>
     <string name="no_location_found">Не могу определить ваше местоположение.</string>
     <string name="camera_permission_needed">Необходимо разрешение на использование камеры, чтобы делать фотографии!</string>
     <string name="take_picture">Быстрый снимок</string>
@@ -129,6 +132,7 @@
     <string name="attached_image">Прикрепить изображение</string>
     <string name="remove_image">Удалить прикреплённое изображение</string>
     <string name="edit_image">Редактировать прикреплённое изображение</string>
+    <string name="edit_recipients">Редактировать получателей</string>
     <string name="permission_needed_for_action">Необходимо разрешение для данного действия.</string>
     <string name="request_permission">Запрос разрешения</string>
     <string name="no_messages_with_contact">Никто ещё ничего не написал. Самое время начать!</string>
@@ -152,14 +156,24 @@
     <string name="forward_message">Переслать сообщение</string>
     <string name="share_message">Поделиться сообщением</string>
     <string name="copy_message_text">Скопировать только текст</string>
+    <string name="select_text_to_copy">Выберите текст, который вы хотите скопировать:</string>
+    <string name="copy_all_text">Копировать все</string>
     <string name="open_link_to_browser">Открыть ссылку в браузере</string>
     <string name="open_link_internal">Открыть ссылку</string>
     <string name="copy_link">Копировать ссылку</string>
+    <string name="attach_vcard">Прикрепите контакт как vCard</string>
+    <string name="attach_plain_text">Прикрепить контакт как обычный текст</string>
+    <!-- Templates -->
+    <string name="type_template_text">Введите текст шаблона ...</string>
+    <string name="delete_template">Вы действительно хотите удалить этот шаблон?</string>
+    <string name="no_templates">Используйте кнопку <b> + </b>, чтобы создать шаблон</string>
     <!-- Compose Screen -->
     <string name="compose_message">Написать новое сообщение</string>
     <string name="send_message">Отправить сообщение</string>
     <string name="enter_contact_name">Введите имя</string>
     <string name="error_processing_vcard">Ошибка обработки визитки</string>
+    <string name="compose_recents">Недавний</string>
+    <string name="compose_groups">Группы</string>
     <!-- Onboarding Screen -->
     <string name="permissions_needed">Приложение не сможет работать без этих разрешений! Нужно принять их прежде чем мы продолжим.</string>
     <string name="loading_messages">Обработка...</string>
@@ -216,11 +230,18 @@
     <string name="default_notifications_channel_description">Данные настройки будут применены во всех диалогах, где ещё не был создан собственный Канал Уведомлений.</string>
     <string name="test_notifications_channel">Тестовое уведомление</string>
     <string name="status_notifications_channel">Уведомления состояния</string>
+    <string name="background_service_channel">Фоновые уведомления</string>
     <string name="general_notifications_channel">Основные</string>
     <string name="media_parse_channel">Медиа анализатор</string>
     <string name="failed_messages_channel">Неотправленные сообщения</string>
+    <string name="silent_background_services">Тихие фоновые уведомления</string>
+    <string name="account_activity_notifications">Уведомления об активности учетной записи</string>
+    <string name="quick_text_channel">Быстрое текстовое уведомление</string>
     <string name="media_parse_text">Анализируем медиафайлы в предыдущих сообщениях...</string>
+    <string name="auto_reply_parse_text">Поиск авто-ответов для предыдущего текстового сообщения</string>
     <string name="creating_channels_text">Создаём каналы уведомлений...</string>
+    <string name="write_new_message">Написать новое сообщение...</string>
+    <string name="receiving_a_message">Получение сообщения ...</string>
     <!-- About, Help and Feedback and Settings -->
     <string name="changelog">Список изменений</string>
     <string name="copyright">© 2016 Jake Klinker &amp; Luke Klinker</string>
@@ -240,6 +261,9 @@
     <string name="troubleshooting">Решение проблем</string>
     <string name="get_in_touch">Связаться с нами</string>
     <string name="faqs">Часто задаваемые вопросы</string>
+    <string name="get_help">Получить помощь</string>
+    <string name="get_help_summary">Есть вопрос? Для команды из одного человека я получаю сумасшедшее количество писем каждый день, это типично во время разработки новых функций. Чтобы помочь мне, было бы здорово, если бы вы могли быстро найти ответ здесь, чтобы узнать, не ответил ли я уже на ваш вопрос.</string>
+    <string name="get_help_summary_2">Раздел справки довольно обширен, но если вы не нашли свой конкретный вопрос, пожалуйста, свяжитесь с нами, я буду рад обсудить вашу проблему!</string>
     <string name="features">Особенности</string>
     <string name="issues">Трекер задач</string>
     <string name="issues_summary">Также может служить в качестве плана разработки</string>
@@ -279,6 +303,7 @@
     <string name="heads_up">Всплывающее окно</string>
     <string name="repeat_never">Никогда</string>
     <string name="repeat_one_min">Каждую минуту</string>
+    <string name="repeat_two_mins">Каждые две минуты</string>
     <string name="repeat_five_mins">Каждые 5 минут</string>
     <string name="repeat_ten_mins">Каждые 10 минут</string>
     <string name="repeat_half_hour">Каждые полчаса</string>
@@ -295,13 +320,17 @@
     <string name="vibrate_one_short">Короткая</string>
     <string name="vibrate_one_long">Длинная</string>
     <string name="vibrate_one_extra_long">Очень длинная</string>
+    <string name="vibrate_two_short_one_long">Две короткие, одна длинная вибрация</string>
+    <string name="vibrate_one_long_one_short_one_long">Одна длинная, одна короткая, одна длинная вибрация</string>
     <string name="keyboard_layout">Настройка клавиши Enter</string>
     <string name="keyboard_default">По умолчанию</string>
     <string name="keyboard_send_key">Отправить сообщение</string>
     <string name="keyboard_enter_key">Перенос строки</string>
     <string name="sound_effects">Звуковые эффекты</string>
     <string name="delivery_reports">Отчёт о доставке</string>
+    <string name="delivery_reports_summary">Большинство операторов не поддерживают этот вариант</string>
     <string name="theme_settings">Персонализация</string>
+    <string name="theme_settings_category">Смотри и пробуй</string>
     <string name="conversation_list_category">Список диалогов</string>
     <string name="general_category">Основные</string>
     <string name="theme_settings_redirect">Тема</string>
@@ -309,6 +338,9 @@
     <string name="global_theme_color">Цвет темы</string>
     <string name="font_size">Размер шрифта</string>
     <string name="rounder_bubbles">Закруглённые пузырьки сообщений</string>
+    <string name="adjustable_nav_bar">Выберите Nav Bar для Базовой темы.</string>
+    <string name="adjustable_nav_bar_summary">Светлая тема будет использовать белую навигационную панель, в то время как
+темные темы будут использовать черную навигационную панель</string>
     <string name="apply_theme_globally">Применить для всех диалогов</string>
     <string name="apply_theme_globally_summary">Удалить все индивидуальные настройки оформления диалогов в пользу общей цветовой палитры.</string>
     <string name="swipe_delete">Удалить жестом</string>
@@ -337,6 +369,8 @@
     <string name="resync_account_summary">Отсутствуют сообщения? Используйте это, чтобы синхронизировать данные с основным устройством.</string>
     <string name="resync_account_summary_phone">Сообщения на сервере будут стёрты и заменены актуальными, хранящимися непосредственно в памяти устройства.</string>
     <string name="resync_account_confirmation">Все сообщения будут удалены с этого устройства и загрузятся актуальные данные с основного. Вы уверены, что хотите этого?</string>
+    <string name="resync_contacts">Ресинхронизировать контакты</string>
+    <string name="resync_contacts_summary">Немедленная публикация любых изменений в контактах в сети</string>
     <string name="normalize_color_scheme">Или, можете выбрать единственный цвет общей темы:</string>
     <string name="no_apps_found">Не найдено приложений для выполнения этого действие</string>
     <string name="you_denied_permission">Вы не дали на это разрешение</string>
@@ -356,7 +390,6 @@
     <string name="alert_types">Виды уведомлений</string>
     <string name="alert_types_summary">Различные настройки уведомлений</string>
     <string name="strip_unicode">Не использовать Unicode</string>
-    <string name="use_internal_browser">Использовать встроенный браузер</string>
     <string name="strip_unicode_summary">Специальные символы будут убраны из отправляемого сообщения</string>
     <string name="giffgaff_delivery">Отчёт о доставке Giffgaff</string>
     <string name="notification_actions">Быстрые действия в уведомлениях</string>
@@ -371,8 +404,12 @@
     <string name="emoji_style">Стиль emoji</string>
     <string name="emoji_style_default">Системные</string>
     <string name="emoji_style_android_o">Google\'s Android O</string>
+    <string name="settings_phone_number">Телефонный номер</string>
+    <string name="disable_battery_optimization">Отключить оптимизацию батареи</string>
+    <string name="disable_battery_optimization_summary">Если сообщения не поступают с вашего телефона в Интернет, попробуйте отключить оптимизацию батареи для Pulse.</string>
     <!-- MMS Configuration Settings -->
     <string name="max_mms_size">Максимальный размер изображения</string>
+    <string name="max_mms_size_summary">Не устанавливайте это значение выше, чем позволяет ваш оператор</string>
     <string name="use_group_mms">Использовать групповые MMS</string>
     <string name="auto_save_media">Автосохранение медиафайлов</string>
     <string name="auto_save_media_summary">Автоматически сохранять содержимое MMS в папке Загрузки при получении.</string>
@@ -388,11 +425,12 @@
     <string name="signature">Подпись</string>
     <string name="signature_summary">Подпись не будет отображаться в списке сообщений Pulse, её увидит только получатель сообщения.</string>
     <string name="cleanup_old_messages">Удалить старые сообщения</string>
+    <string name="cleanup_old_messages_summary">Это выполняется один раз в день для удаления любых сообщений, которые были старше вашего выбранного периода времени</string>
     <string name="delayed_sending">Отложенная отправка</string>
     <string name="quick_compose">Быстрый ответ</string>
-    <string name="quick_compose_summary">Постоянно активное уведомление ускоряет доступ к написанию новых сообщений.</string>
     <string name="secure_private_conversations">Защищённые личные диалоги</string>
     <string name="secure_private_conversations_summary">Требуется ввести PIN-код для доступа к личным диалогам.</string>
+    <string name="use_internal_browser">Использовать встроенный браузер</string>
     <!-- Theming Options -->
     <string name="day_night">Стандартная (День/Ночь)</string>
     <string name="always_light">Всегда светлая</string>
@@ -443,11 +481,12 @@
     <string name="default_channel">Стандартный канал</string>
     <string name="off">Не включать</string>
     <string name="on">Включать</string>
+    <string name="share_promo">Привет! Мне очень понравилось переписываться через Pulse! Попробуй и ты, по это ссылке: https://play.google.com/store/apps/details?id=xyz.klinker.messenger</string>
+    <string name="verifying_password">Проверяем пароль...</string>
+    <!-- Rate it -->
     <string name="rate_it">Оценить!</string>
     <string name="love_pulse_question">Понравился Pulse?</string>
     <string name="give_a_rating">Оцените приложение или поделитесь им с вашими друзьями!\n\nВаша оценка на 5 звезд согреет моё сердце :)</string>
-    <string name="share_promo">Привет! Мне очень понравилось переписываться через Pulse! Попробуй и ты, по это ссылке: https://play.google.com/store/apps/details?id=xyz.klinker.messenger</string>
-    <string name="verifying_password">Проверяем пароль...</string>
     <!-- Times -->
     <string name="one_second">1 секунда</string>
     <string name="three_seconds">3 секунды</string>
@@ -497,4 +536,5 @@
     <string name="three_month_purchase_improved">$1.99 /\nза 3 месяца</string>
     <string name="yearly_purchase_improved">$5.99 /\nв год</string>
     <string name="subscription_toast">Денежные средства <b>не</b> будут списаны до истечения пробного периода. Вы можете отменить подписку в любой момент.</string>
+    <string name="quick_compose_summary">Постоянно активное уведомление ускоряет доступ к написанию новых сообщений.</string>
 </resources>
