--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -426,6 +426,7 @@
     <string name="notification_actions">Notification Actions</string>
     <string name="notification_actions_summary">A max of three actions can be applied to a notification</string>
     <string name="mms_download_directory">Media Download Directory</string>
+    <string name="mms_download_directory_summary">Where you want images and other MMS media to be saved</string>
     <string name="refresh_firebase">Refresh Account</string>
     <string name="refresh_firebase_summary">Issues with your account not syncing or not letting you log in? Use this option.</string>
     <string name="refreshing_notifications">Refreshing notification token…</string>
