don't allow for selecting conversations that are already in a folder or are private

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -510,6 +510,8 @@
     <string name="create_folder_summary">After a folder is created, you can use it to help organize your conversations</string>
     <string name="no_folders">No folders created - tap the top preference to create your first folder</string>
     <string name="folder_name">Folder name…</string>
+    <string name="private_conversations_cannot_be_added_to_folders">Private conversations cannot be added.</string>
+    <string name="conversation_already_in_a_folder">Already in a different folder.</string>
 
     <!-- Theming Options -->
     <string name="day_night">Default (Day/Night)</string>
