--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="remove_image">Remove Attached Image</string>
     <string name="edit_image">Edit Attached Image</string>
     <string name="edit_recipients">Edit Recipients</string>
+    <string name="select_folder">Select Folder for Conversation</string>
     <string name="permission_needed_for_action">Permissions needed for this action.</string>
     <string name="request_permission">Request Permission</string>
     <string name="no_messages_with_contact">You don\'t have any messages in this conversation yet,
