implement switching folders from within a conversation's settings page

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -514,6 +514,7 @@
     <string name="folder_name">Folder name…</string>
     <string name="private_conversations_cannot_be_added_to_folders">Private conversations cannot be added.</string>
     <string name="conversation_already_in_a_folder">Already in a different folder.</string>
+    <string name="no_folder">No Folder</string>
 
     <!-- Theming Options -->
     <string name="day_night">Default (Day/Night)</string>
