add support for marking a conversation(s) as unread, via the multi-select menu.
This is behind a feature flag

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -67,6 +67,9 @@
     <string name="menu_snooze_24">24 hours</string>
     <string name="menu_snooze_72">72 hours</string>
     <string name="menu_snooze_custom">Pick a time</string>
+    <string name="menu_mark_as_unread">Mark as Unread</string>
+    <string name="menu_pin_conversation">Pin/Unpin Conversation</string>
+    <string name="menu_mute_conversation">Mute/Unmute Conversation</string>
 
     <!-- Empty Screen -->
     <string name="no_messages">No messages</string>
