--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -50,8 +50,8 @@
     <string name="menu_view_contacts">View contacts</string>
     <string name="menu_view_media">View media</string>
     <string name="menu_delete_conversation">Delete conversation</string>
-    <string name="menu_archive_conversation">Archive Conversation</string>
-    <string name="menu_move_to_inbox">Move to Inbox</string>
+    <string name="menu_archive_conversation">Archive conversation</string>
+    <string name="menu_move_to_inbox">Move to inbox</string>
     <string name="menu_conversation_information">Conversation information</string>
     <string name="menu_copy_phone_number">Copy number</string>
     <string name="menu_view_full_conversation">View History</string>
@@ -376,6 +376,10 @@
     <string name="apply_theme_globally_summary">Remove the per-conversation themes, in favor
         of this global color set</string>
     <string name="swipe_delete">Swipe to Delete</string>
+    <string name="swipe_actions">Swipe Actions</string>
+    <string name="left_to_right_swipe">Left-to-Right Swipe</string>
+    <string name="right_to_left_swipe">Right-to-Left Swipe</string>
+    <string name="no_swipe">No Swipe Action</string>
     <string name="blacklist_hint">Type number to blacklist…</string>
     <string name="add_blacklist">%1$s\n\nAre you sure you want to add this blacklist? Messages will
         no longer be saved when they come from this number and you will not be notified!</string>
